frontend/test/should_pass/cast_int_object_int_exec.grg
using cast_model;

rule r {
	modify {
	---
		def var i:int;
		exec ({
			yield i = (int)(object)42 // should pass test with nested cast
		});
	}
}
