frontend/test/should_fail/exec_defined_twice.grg
using deep_model_001;

rule r(b : B) : (B) {
  modify{
    return (b);
    exec((x:B)=r(b) && (x:B)=r(b)); // defined twice
  }
}
